--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     (e.onload = () => {
       window.WebChat.default(
         {
+          initPayload: "/greet",
           customData: { language: "en" },
           socketUrl: "http://localhost:5005",
           // add other props here
